# TradingAgents-CN

./: .gitignore  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements-lock.txt  requirements.txt
docs/: installation-mirror.md
scripts/: fix_pyyaml_windows.ps1  smart_start.sh
tests/: test_complete_tool_workflow.py
tradingagents/agents/analysts/: market_analyst.py
tradingagents/config/: config_manager.py
tradingagents/graph/: propagation.py
